# gooseloop

./: .coverage  .gitignore  .gooseignore  .importlinter  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTICE  PROTOCOL.md  README.md  SECURITY.md  doc-map.example.toml  gooseloop.example.toml  gooseloop.toml  names.example.txt  pyproject.toml
.forgejo/workflows/: test.yml
.github/workflows/: test.yml
docs/adr/: 0000-four-layer-import-topology.md  0001-engine-returns-pipeline-of-phases.md  0002-decorator-only-engine-registry.md  0003-slug-required-no-filename-fallback.md  0004-engine-and-environment-as-siblings.md  0005-environment-abc-narrows-contrib-mixins.md  0006-pipeline-named-slots-framework-owns-review-summary-order.md  0007-review-output-schema-operator-actions-ledger.md  0008-compose-style-recipe-overlay-merge.md  0009-default-engine-and-short-name-resolution.md  0010-run-lock-one-run-per-loop-root.md  0011-configurable-output-env-with-verified-reference.md  0012-phase-telemetry-wide-events-and-transcripts.md  0013-routing-as-plan-of-record-with-provenance.md  0014-egress-tripwire-redaction-flags-rotate-action.md  0015-the-boundary-bwrap-masked-goose-spawns.md  0016-doc-drift-discovery-is-derived-first.md  0017-contrib-withdrawn-shape-abcs-live-in-the-consuming-project.md  0018-summary-deliverable-marker-wrapped-verbatim-in-transcripts.md
gooseloop/: PROTOCOL.md  __init__.py  __main__.py  artifact.py  boundary.py  branch_policy.py  config.py  context_prepend.py  engine.py  environment.py  extract.py  footer.py  goose.py  guardrails.py  introspect.py  looper.py  phase.py  predicates.py  protocol.py  recipe_merge.py  runlock.py  session.py  telemetry.py  text.py  toolkit.py
scripts/: pre_release_check.py
tests/: conftest.py  test_artifact.py  test_boundary.py  test_branch_policy_and_looper.py  test_cli.py  test_config.py  test_context_prepend.py  test_doc_drift.py  test_engine_override.py  test_extract.py  test_git_recap.py  test_goose_failure_modes.py  test_goose_retry.py  test_guardrails.py  test_hello_world.py  test_introspect.py  test_phase_and_pipeline.py  test_predicates.py  test_protocol.py  test_protocol_doc_conformance.py  test_public_api.py  test_recipe_merge.py  test_runlock.py  test_session.py  test_telemetry.py  test_toolkit.py
(+21 files in other folders)
