[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gooseloop"
version = "0.1.0"
description = "Execution shell for goose-recipe pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Storm Developments" }]
keywords = ["goose", "llm", "pipeline", "agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
gooseloop = "gooseloop.__main__:main"

[project.urls]
Source = "https://gitforge.ca/storm/gooseloop"

[tool.setuptools.packages.find]
include = ["gooseloop*"]
exclude = ["tests*", "engines*"]
