[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gooseloop"
version = "0.1.0"
description = "Execution shell for goose-recipe pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Storm Developments" }]
keywords = ["goose", "llm", "pipeline", "agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "minijinja>=2",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",
]

[project.scripts]
gooseloop = "gooseloop.__main__:main"

[project.urls]
Source = "https://github.com/smattymatty/gooseloop"

[tool.setuptools.packages.find]
include = ["gooseloop*"]
exclude = ["tests*", "engines*"]

[tool.mypy]
# Strict covers the framework package only. Engines are a teaching set
# users copy and delete (see CLAUDE.md); tests stay pytest-plain.
strict = true
python_version = "3.11"
files = ["gooseloop"]
